# Evolution-of-Todo

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/001-in-memory-python-cli/: 0001-create-phase-i-cli-spec.spec.prompt.md  0002-plan-phase-i-cli-implementation.plan.prompt.md  0003-generate-tasks-for-phase-i-cli.tasks.prompt.md  0004-implement-phase-i-cli.green.prompt.md
history/prompts/constitution/: 0001-update-constitution-for-evolution-of-todo.constitution.prompt.md  0001-update-project-constitution-principles.constitution.prompt.md
history/prompts/general/: 0001-git-commit-constitution-update.general.prompt.md  0001-git-push-to-main-via-ssh.general.prompt.md  0002-git-push-main-auth-failure.general.prompt.md
specs/001-in-memory-python-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-in-memory-python-cli/checklists/: requirements.md
specs/001-in-memory-python-cli/contracts/: cli-api.md
src/: cli.py  handlers.py  store.py  utils.py
tests/integration/: test_cli.py  test_cli_in_process.py
tests/unit/: test_store.py  test_utils.py
